# SFMLGame

./: .gitignore  README.md  SFML_Game.sln
SFMLGame/: CMakeLists.txt  Main.cpp  SFMLGame.vcxproj  SFMLGame.vcxproj.filters  vcpkg.json
SFML_Game/: Game.cpp  Game.h  SFML_Game.vcxproj  SFML_Game.vcxproj.filters  State.cpp  State.h  main.cpp  vcpkg.json
SFML_Game/Config/: graphics.json
